--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Video Popup 1</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css?ver=1">
-     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+	<meta charset="UTF-8">
+	<title>Stratton Violin</title>
+	<link rel="stylesheet" type="text/css" href="css/mystyle.css">
+	<link rel="stylesheet" type="text/css" href="css/vegas.css">    
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
-    <span id="versionSpan" style="display: none;"></span>
-    <div id="app"/>
-    <script src="bundle.js?ver=1"></script>
+	<span id="versionSpan" style="display: none;"></span>
+	<div id="app" />
+	<script src="bundle.js"></script>
 </body>
+
 </html>
